<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".detail.UserDetailActivity">


    <TextView
        android:id="@+id/tv_followers_layout2"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:drawablePadding="5dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toBottomOf="@+id/tv_following_layout2"
        app:layout_constraintEnd_toStartOf="@+id/tv_following_layout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_following_layout2"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/tv_repository_layout2"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginEnd="60dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toBottomOf="@+id/tv_following_layout2"
        app:layout_constraintEnd_toEndOf="parent"


        app:layout_constraintStart_toEndOf="@+id/tv_following_layout2"
        app:layout_constraintTop_toTopOf="@+id/tv_following_layout2"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/textView19"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginBottom="12dp"
        android:text="@string/repository"
        app:layout_constraintBottom_toTopOf="@+id/tv_repository_layout2"
        app:layout_constraintEnd_toEndOf="@+id/tv_repository_layout2"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_repository_layout2" />

    <TextView
        android:id="@+id/tv_following_layout2"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginTop="144dp"
        android:text="@string/followings"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.430"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <TextView
        android:id="@+id/textView17"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginBottom="12dp"
        android:text="@string/followings"
        app:layout_constraintBottom_toTopOf="@+id/tv_following_layout2"
        app:layout_constraintEnd_toStartOf="@+id/textView19"

        app:layout_constraintHorizontal_bias="0.245"
        app:layout_constraintStart_toEndOf="@+id/textView20" />

    <TextView
        android:id="@+id/textView20"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginBottom="12dp"
        android:text="@string/followers"
        app:layout_constraintBottom_toTopOf="@+id/tv_followers_layout2"
        app:layout_constraintEnd_toEndOf="@+id/tv_followers_layout2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_followers_layout2" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/img_avatar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/avatars" />

    <TextView
        android:id="@+id/tv_name"
        style="@style/layoutin.fontin"
        android:layout_marginTop="16dp"
        android:text="@string/abraham"
        android:textAlignment="center"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/img_avatar" />

    <TextView
        android:id="@+id/tv_company"
        style="@style/layoutin.fontin.15sp"
        android:layout_marginTop="25dp"
        android:layout_marginBottom="35dp"
        android:drawablePadding="5dp"
        android:text="@string/google"
        app:drawableLeftCompat="@drawable/ic_baseline_work_24"
        app:layout_constraintBottom_toTopOf="@+id/tv_followers_layout2"
        app:layout_constraintEnd_toEndOf="@+id/tv_location"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/tv_location"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/tv_location"
        style="@style/layoutin.fontin.15sp"
        android:layout_gravity="center"
        android:layout_marginStart="50dp"
        android:layout_marginTop="12dp"
        android:drawablePadding="5dp"
        android:text="@string/indonesia"
        app:drawableLeftCompat="@drawable/ic_baseline_location_city_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_name" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_following_layout2"
        app:tabTextColor="@color/black" />

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="50dp"
        android:layout_height="63dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="@+id/tv_following_layout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintVertical_bias="0.0" />

    <ToggleButton
        android:id="@+id/toggle_favorite"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:textOff=""
        android:textOn=""
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:background="@drawable/favorite_toggle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/img_avatar"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>